--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.ts",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "start": "ts-node server.ts",
-    "dev": "nodemon server.ts",
+    "start": "node --loader ts-node/esm server.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm server.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.5"
+    "mysql2": "^3.11.5",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
