--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,12 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.ts",
-  "type": "module",
-  "scripts": {
-    "start": "node --loader ts-node/esm server.ts",
-    "dev": "nodemon --exec node --loader ts-node/esm server.ts",
-    "build": "tsc"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.5",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20.11.24",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "dist/server.js",
+    "type": "module",
+    "scripts": {
+      "start": "node dist/server.js",
+      "dev": "nodemon",
+      "build": "tsc",
+      "watch": "tsc -w"
+    }
   }
-} 
